--- a/TestRuleOfNegocition/TestRuleOfNegocition.csproj
+++ b/TestRuleOfNegocition/TestRuleOfNegocition.csproj
@@ -14,6 +14,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
+        <PackageReference Include="Moq" Version="4.20.70"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.5"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -22,6 +24,8 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Domain\Domain.csproj"/>
+        <ProjectReference Include="..\Application\Application.csproj"/>
+        <ProjectReference Include="..\Presentation\Presentation.csproj"/>
     </ItemGroup>
 
 </Project>
