--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -11,19 +8,25 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.122
+
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
+
+    - name: Check code format
+      run: dotnet format --verify-no-changes
+
+    - name: Build with analyzers
       run: dotnet build --no-restore
-    - name: Test
+
+    - name: Run tests
       working-directory: TestRuleOfNegocition
-      run: dotnet test
+      run: dotnet test --no-build
