--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -21,12 +21,23 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
 
-    - name: Check code format
-      run: dotnet format --verify-no-changes
-
     - name: Build with analyzers
       run: dotnet build --no-restore
 
     - name: Run tests
       working-directory: TestRuleOfNegocition
       run: dotnet test --no-build
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ghcr.io/Marximus568/Assement-T:latest
